src/objects/System_Design_Quote_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Used to Enable/Disable behind the scenes pricing for SDQ records.</description>
    <fields>
        <fullName>Calc_Taxable_Income_on_PBI_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calc Taxable Income on PBI Incentives?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_of_Capital__c</fullName>
        <label>Cost of Capital</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Pricing_Region_Cutoff_Date__c</fullName>
        <description>The final date where Pricing Region will be determined by the lookup field on the County object</description>
        <label>County Pricing Region Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Proposal_Valid__c</fullName>
        <description>Default number of days for which the created Proposal will be valid</description>
        <label>Days Proposal Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_1_Financing_Type__c</fullName>
        <label>Default Scenario 1 Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_1_Lease_Fund_ID__c</fullName>
        <label>Default Scenario 1 Lease Fund ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_2_Financing_Type__c</fullName>
        <label>Default Scenario 2 Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_2_Lease_Fund_ID__c</fullName>
        <label>Default Scenario 2 Lease Fund ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_3_Financing_Type__c</fullName>
        <label>Default Scenario 3 Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scenario_3_Lease_Fund_ID__c</fullName>
        <label>Default Scenario 3 Lease Fund ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_System_Size_Elig_for_Cash_Rebate__c</fullName>
        <label>Min. System Size Elig. for Cash Rebate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_CPO_matching_on_SDQs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Run the Community Program Matching on the SDQs.</inlineHelpText>
        <label>Run CPO matching on SDQs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Incentives_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Incentives Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Pricing_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will calculate pricing on insert/update as long as the pricing is not locked and obeys pricing pre-reqs and rules.</description>
        <inlineHelpText>This will calculate pricing on insert/update as long as the pricing is not locked and obeys pricing pre-reqs and rules.</inlineHelpText>
        <label>Run Pricing Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Promotions_Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run Promotions and Entitlements Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_SRECs_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run SRECs Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Down_Payment__c</fullName>
        <label>Scenario 1 Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Escalator__c</fullName>
        <label>Scenario 1 Lease Escalator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Lease_Option__c</fullName>
        <label>Scenario 1 Lease Option</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Proposal_Term_Months__c</fullName>
        <label>Scenario 1 Proposal Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Down_Payment__c</fullName>
        <label>Scenario 2 Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Lease_Escalator__c</fullName>
        <label>Scenario 2 Lease Escalator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Lease_Option__c</fullName>
        <label>Scenario 2 Lease Option</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_2_Proposal_Term_Months__c</fullName>
        <label>Scenario 2 Proposal Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_3_Down_Payment__c</fullName>
        <label>Scenario 3 Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_3_Lease_Escalator__c</fullName>
        <label>Scenario 3 Lease Escalator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_3_Lease_Option__c</fullName>
        <label>Scenario 3 Lease Option</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_3_Proposal_Term_Months__c</fullName>
        <label>Scenario 3 Proposal Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Design Quote Settings</label>
</CustomObject>